# crux

examples/todomvc/: Cargo.toml
examples/todomvc/shared/: Cargo.toml  uniffi.toml
examples/todomvc/shared/src/: app.rs  lib.rs
examples/todomvc/shared_types/: build.rs
examples/todomvc/web-nextjs/: package.json  pnpm-lock.yaml
examples/todomvc/web-nextjs/hooks/: useCrux.ts
examples/todomvc/web-nextjs/pages/: index.tsx
