[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "shared"

[dependencies]
uniffi = "0.21.0"
uniffi_macros = "0.21.0"
crux_core = { path = "../../../crux_core" }
wasm-bindgen = "0.2.83"
lazy_static = "1.4.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"

[build-dependencies]
uniffi_build = { version = "0.21.0", features = ["builtin-bindgen"] }
